--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="card">
     <div id="msg"></div>
     <div id="input-area">
-      <input type="password" id="password" placeholder="请输入专属密码" style="padding:8px;width:200px;">
+      <input type="text" id="password" placeholder="请输入专属密码~" style="padding:8px;width:200px;">
       <button onclick="checkPwd()" style="padding:8px 16px;">验证</button>
     </div>
     <div id="video-area" style="display:none;">
